# DiVA-streamlit-be

./: .gitignore  README.md  integrate.py  pyproject.toml  tes.py
examples/: test_helper.py
job/: refresh_entry.py
scripts/: kill_server.sh  mount_nas.sh  requirements.sh  run_executor.sh  run_extractor.sh  run_mounter.sh  run_server.sh  run_test.sh  setup.sh  umount_nas.sh
services/custom_model/: siglip.py
services/monitoring/: extractor.py
services/nas/: auth_service.py  decorator.py  executor.py  folder_service.py  integration.py
services/postgre/: connection.py  models.py
services/postgres/: connection.py  models.py
src/: main.py  secret.py
src/routers/: health_check.py  query.py  retrieve_image.py  stream.py  stream_image.py
src/routers/query/: search_by_image.py  stream_image.py
src/routers/tes/: search_by_image.py  stream_image.py
src/schema/: nas_params.py  request_format.py  response.py
utils/: clip.py  executor.py  formatter.py  helper.py  json.py  logger.py  model.py  nas.py  preprocessing.py  processor.py  query.py  siglip.py  trained_label.json  validator.py
utils/custom_model/: clip_vit.py
utils/error/: custom_error.py  exception_handler.py
utils/nas/: auth_service.py  decorator.py  executor.py  folder_service.py  integration.py
utils/vector/: faiss.py
utils/zero_shot/: classifier.py  processor.py
