[project]
name = "diva-streamlit-be"
version = "0.1.0"
description = ""
authors = [
    {name = "bastian-armananta",email = "putra.armananta@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "coverage (>=7.6.12,<8.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
