[project]
name = "diva-streamlit-be"
version = "0.1.0"
description = ""
authors = [
    {name = "bastian-armananta",email = "putra.armananta@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "coverage>=7.8.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "sqlmodel>=0.0.24",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]


[tool.ruff]
line-length = 100
indent-width = 4


[tool.ruff.format]
quote-style = "single"
